# eink

./: Cargo.toml  README.md
scripts/: pi-build.sh  pi-mount.example.sh
src/: main.rs
