[package]
name = "eink"
version = "0.1.0"
authors = ["Arran France <arran@arranfrance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.6.2"
epd-waveshare = { git = "https://github.com/caemor/epd-waveshare", rev = "401858c"}
rppal = { version = "0.12.0", features = ["hal-unproven"] }
rand = "0.8.0"
anyhow = "*"

[profile.release]
lto = true