[package]
name = "eink"
version = "0.1.0"
authors = ["Arran France <arran@arranfrance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.7.1"
epd-waveshare = "0.5.0"
rppal = { version = "0.14.1", features = ["hal-unproven"] }
rand = "0.8.0"
anyhow = "1.0.66"

[profile.release]
lto = true